<resources>
    <string name="title_activity_main">ViewEye MCU</string>
    <string name="ipconfig_title">Server Settings</string>
    <string name="svr_ip">Server addr</string>
    <string name="svr_port">Server port</string>
    <string name="ipCannotBeNull">Server port</string>
    <string name="portwrong">Wrong port</string>
	<string name="menu_back">Back</string>
	<string name="menu_settings">Setting</string>
	<string name="label_name">ViewEye MCU</string>
	<string name="app_name">ViewEye MCU</string>
	<string name="videoPlayerTitle">ViewEye MCU</string>
	<string name="loginLogin">Login</string>
	<string name="loginNetSetting">Setting</string>
	<string name="loginExi">Back</string>
	<string name="loginUserName">Name:</string>
	<string name="loginPassword">PWD:&#160;</string>
	<string name="udpConnect">UDP</string>
	<string name="tcpConnect">TCP</string>
	<string name="loginPlatoform">Domain:</string>
	<string name="defalutLoginUserName">Please input userName</string>
	<string name="defalutLoginPassword">Please input password</string>
	<string name="defalutLoginPlatform">Domain(optional)</string>
	<string name="loginAutoUpdate">Auto upgrading configuration file</string>
	<string name="networkSettingTitle">Net Set</string>
	<string name="networkSettingAutoLogin">Auto Login</string>
	<string name="networkSettingBack">Return</string>
	<string name="networkSettingSave">Save</string>
	<string name="networkSettingWPUIP">WPU IP:</string>
	<string name="networkSettingNetType">Choose Network</string>
	<string name="networkSettingdefaultNetType">Default Network</string>
	<string name="WPUIP">Please input WPU Address</string>
	 <string name="soundSwitching">Sound Switch:</string>
	<string name="autoLogin">Auto Login</string>
	<string name="publicAccount">Public logging</string>
	<string name="filePath">Picture Path:</string>
	<string name="netConnectType">Network Type:</string>
	<string name="defaultFilePath">Picture Save path:</string>
	<string name="udpFirst">UDP</string>
	<string name="tcpFirst">TCP</string>
	<string name="wpuBack">Return</string>
	<string name="networkSettingCloundStepControl">PTZ Step:</string>
	<string name="networkSettingCameraStepControl">Lens Step:</string>
	<string name="remoteIP">Remote Address</string>
	<string name="connect">Connecting</string>
	<string name="eixtconnect">Exit</string>
	<string name="menu_start">Start</string>
	<string name="checkNetwork">Network</string>
	<string name="browser">Browser</string>
	<string name="setNetworkTitle">Network Setting</string>
	<string name="systemNetworkSetting">Network Setting</string>
	<string name="updateVersion">Version Update</string>
	<string name="systemNetworkSettingExit">Exit</string>
	<string name="setNetworkMessage">For mistake network or network unavailable,connecting failed, please check mobile,or login again later on</string>
	<string name="setNetworkPositive">Setting</string>
	<string name="setNetworkNegative">Cancel</string>
	<string name="SUCCESS">Success</string>
	<string name="MIN_LIMIT">Unkown Code</string>
	<string name="opensettingmistake">Open Setting Mistake,Please Check Your Network</string>
    <string name="login_progress_tip">Logging, Please Wait...</string>
	<string name="Realtime_Monitor">Realtime Monitor</string>
    <string name="Alarm_Search">Alarm Search</string>
    <string name="State">State:</string>
    <string name="Loading">Loading...</string>
    <string name="Refresh">Refresh</string>
    <string name="NetworkExceptionClickToLoad">Network error,Click to load More</string>
    <string name="back">Back</string>
    <string name="alarm_type">Alarm Type</string>
	<string name="camera_search_result">Camera Search List</string>
	<string name="alarm_occur_time">Occur Time:</string>
    <string name="past_alarm">Past Alarm</string>
    <string name="cur_alarm">Cur Alarm</string>
	<string name="alarm_level">Level</string>
    <string name="device_name">Device</string>
    <string name="fault_type">Fault</string>
    <string name="occur_time">Occur Time</string>
    <string name="whether_affirm">Affirmed</string>
    <string name="nextOfficeTip">>></string>
	<string name="ZTENV_ERROR_RTSP_URL">WPU address error... </string>
	<string name="blank" />
	<string name="receivingData">Receiving data please wait...</string>
	<string name="ZTENV_ERROR_RTSP_SOCKET_SETUP">Unable connect TO remote address, please confirm connecting validly</string>
	<string name="ZTENV_RECEIVING_NET_DATA">Initializing network,please wait...</string>
	<string name="NOTIFY_VIDEO_RTSP_DESCRIBE_CONNECT_SUCCESS_INFO">Connecting successful...</string>
	<string name="ZTENV_ERROR_IOEXCEPTION">Please request video again...</string>
	<string name="ZTENV_ERROR_INITIAL_DATASOCKET">Initializing network error...</string>
	<string name="NOTIFY_VIDEO_RTSP_PLAY_CONNECT_SUCCESS_INFO">Connecting finished...</string>
	<string name="NOTIFY_VIDEO_RTSP_TEARDOWN_CONNECT_SUCCESS_INFO">Request video again...</string>
	<string name="PAUSE_SUCCESS_REQUEST_VIDEO_AGAIN">Request video again...</string>
	<string name="UNSUPPORTED_STREAM_FORMATE">Android software only support h.264 stream</string>
	<string name="CONNECT_TIMEOUT">Connecting time out ,please confirm the network signal...</string>
	<string name="NOTIFY_VIDEO_RTSP_DESCRIBE_CONNECT_FAILED_INFO">Connecting failed...</string>
	<string name="NOTIFY_VIDEO_RTSP_SETUP_CONNECT_FAILED_INFO">Connecting failed...</string>
	<string name="NOTIFY_VIDEO_RTSP_PLAY_CONNECT_FAILED_INFO">Connecting failed....</string>
	<string name="NOTIFY_VIDEO_RTSP_TEARDOWN_CONNECT_FAILED_INFO">closing connecting failed....</string>
	<string name="RTSPFORMATEERROR">RTSP is invalid...</string>
	<string name="NOT_SUPPORT_ARM_CPU">Does not support this machine</string>
	<string name="ZTENV_ERROR_DESCRIBE_RESPONSE_CODE">Return mistake connecting code from serve...</string>
	<string name="ZTENV_ERROR_SETUP_SESSIONID_NULL">Connecting failed...</string>
	<string name="CLICK_BUTTON_LATER">Please don’t click continually...</string>
	<string name="NOTIFY_INCOMING_DIALOG">There is coming call, video stopped,please connecting again...</string>
	<string name="ZTENV_ERROR_TIMEOUT">Network connecting time out, please connecting again..</string>
	<string name="userNameCannotBeNull">user name cannot be null</string>
	<string name="passwordCannotBeNull">password can not be null</string>
	<string name="wpuipCannotBeNull">WPU IP can not be null</string>
	<string name="EnjoryNow">Enjory Now</string>
	<string name="Cancel">Cancel</string>
	<string name="Rename">Rename</string>
	<string name="Property">Property</string>
	<string name="Delete">Delete</string>
	<string name="SDcardUnChecked">Sdcard UnChecked</string>
	<string name="RecordFileUnChecked">Record UnChecked</string>
	<string name="ImageFileUnChecked">Image UnChecked</string>
	<string name="RenameFileFailed">Rename Failed</string>
	<string name="RENAME_FILE_DUPLICATE">Rename Failed Of Duplicated FileName</string>
	<string name="RecordManage">Record Manage</string>
	<string name="ImageManage">Image Manage</string>
	<string name="FileName">FileName:</string>
	<string name="FilePath">FilePath:</string>
	<string name="CreateTime">CreateTime:</string>
	<string name="Sure">OK</string>
	<string name="PrepareToScanMediaAndWait">Prepare to Scan Media,Please Wait for a minute!</string>
	<string name="IsScanMedia">Is scaning Media,Please Wait for a Minute!</string>
	<string name="MistakeNetwork">Mistake Network!</string>
	<string name="InputCorrectKey">KeyPlease input a correct Key!</string>
	<string name="TrafficsUse">Traffics Use</string>
    <string name="buttonExplain_Play">Play</string>
	<string name="buttonExplain_Snap">Snap</string>
	<string name="buttonExplain_Fullscreensel">Full</string>
	<string name="buttonExplain_OpenPTZ">PTZ</string>
	<string name="buttonExplain_Record">Record</string>
	<string name="buttonExplain_Pre">Pre</string>
	<string name="buttonExplain_Next">Next</string>
	<string name="buttonExplain_Return">Back</string>
    <string name="ERROR_OF_QUERY_PLATFORM_CONFIGURATION">Please ensure the Platform is configurationed</string>
    <string name="NO_RECORD_OF_CURRENT_CAMERA">No Record,Please query other times</string>
	<string name="loginWatingState">logging ,please wait...</string>
	<string name="ClickToLoadMore">Click to Load More...</string>
	<string name="currentCameraNum">Cur Camera</string>
	<string name="totalCameraNum">Total</string>
	<string name="currentPUNum">Cur PU</string>
	<string name="totalPUNum">Total</string>
	<string name="currentOfficeNum">Cur Office</string>
	<string name="totalOfficeNum">Total</string>
    <string name="currentAlarmExceptionNum">Current Alarm</string>
    <string name="currentRecorderNum">Current Recorder</string>
    <string name="pastAlarmExceptionNum">History Alarm</string>
    <string name="totalRecorderNum">Total</string>
    <string name="totalAlarmExceptionNum">Total</string>
	<string name="CAN_NOT_SNAP_PICTURE">No video, capture unavailable...
	</string>
	<string name="STORAGESTATE_SNAP_SUCCESS">snap success..</string>
	<string name="STORAGESTATE_FULL">storage full...</string>
	<string name="STORAGESTATE_FILEPATHERROR">snap failed,make sure file path success...</string>
	<string name="STORAGESTATE_WRITELOGERROR">write log to storage failed...</string>
	<string name="STORAGESTATE_IOException">snap failed,make sure storage is useful...</string>
	<string name="STORAGESTATE_MEDIA_MOUNTED">storage mounted...</string>
	<string name="STORAGESTATE_MEDIA_MOUNTED_READ_ONLY">storage read only...</string>
	<string name="STORAGESTATE_MEDIA_SHARED">storage shared via USB</string>
	<string name="STORAGESTATE_MEDIA_BAD_REMOVAL">storage bad removal</string>
	<string name="STORAGESTATE_MEDIA_UNMOUNTABLE">storage unmountable</string>
	<string name="STORAGESTATE_MEDIA_NOFS">storage is using an unsupported file system
	</string>
	<string name="STORAGESTATE_MEDIA_CHECKING">storage is checking</string>
	<string name="STORAGESTATE_MEDIA_UNMOUNTED">storage unmounted</string>
	<string name="STORAGESTATE_MEDIA_REMOVED">storage has removed</string>
	<string name="STORAGESTATE_CREATE_FOLDER_FAILED">create folder failed</string>
	<string name="update_title_update">Update</string>
	<string name="update_url_or_network_mistake">Update Url is mistake or network unusable!</string>
	<string name="update_request_update">Update now</string>
	<string name="update_title_waiting">Downloading</string>
	<string name="update_request_waiting">Please wait...</string>
	<string name="update_btn_update">Update</string>
	<string name="update_btn_not_update">Update Later</string>
	<string name="update_fail_update_title">Update failed</string>
	<string name="update_fail_update_msg">Update failed ,please update manually</string>
	<string name="update_latest_version">Latest version, no need update</string>
	<string name="update_fail_no_apk">Update failed ,Can not find download software</string>
	<string name="update_set_sure">Confirm</string>
	<string name="Update_Now">Updating,wait for a minute!</string>
	<string name="CAN_NOT_RECORD">No vedio,can\'t record...</string>
	<string name="recordStoreAddress">Record Path</string>
	<string name="inputRecordStoreAddress">Please input the record storage address</string>
	<string name="record_successfully">Record successfully</string>
	<string name="storage_is_full">The sdcard has no capacity</string>
	<string name="unuseful_sdcard">No useful sdcard</string>
	<string name="recorderQuery">Recorder Query</string>
	<string name="warningQuery">Warning Query</string>
	<string name="mapQuery">Map</string>
	<string name="camera_item_map_text">Map</string>
	<string name="camera_item_detail">Detail</string>
	<string name="pu_item_map_text">Map</string>
	<string name="pu_item_detail">Detail</string>
	<string name="office_item_map_text">Map</string>
	<string name="office_item_detail">Detail</string>
	<string name="pull_to_refresh">Pull to Refresh</string>
	<string name="last_update">Last Update</string>
</resources>